--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -117,8 +117,8 @@
 
 @ARTICLE{darden1993pme,
   author = {Darden, T. and York, D. and Pedersen, L.},
-  title = {Particle mesh Ewald: An N· log (N) method for Ewald sums in large
-	systems},
+  title = {{Particle mesh Ewald: An $N \log (N)$ method for Ewald sums in large
+	systems}},
   journal = {The Journal of Chemical Physics},
   year = {1993},
   volume = {98},
@@ -130,7 +130,7 @@
 @ARTICLE{essmann1995spm,
   author = {Essmann, U. and Perera, L. and Berkowitz, M.L. and Darden, T. and
 	Lee, H. and Pedersen, L.G.},
-  title = {A smooth particle mesh Ewald method},
+  title = {{A smooth Particle Mesh Ewald method}},
   journal = {The Journal of Chemical Physics},
   year = {1995},
   volume = {103},
@@ -197,7 +197,7 @@ page=499
 
 @INPROCEEDINGS{ciccotti1993theoretical,
   author = {Ciccotti, G. and Pierleoni, C. and Ryckaert, J.P.},
-  title = {Theoretical foundation and rheological application of non-equilibrium
+  title = {Theoretical foundation and rheological applications of non-equilibrium
 	molecular dynamics},
   booktitle = {Microscopic simulations of complex hydrodynamic phenomena},
   year = {1993},
@@ -208,7 +208,7 @@ page=499
 }
 
 @article{palla2008bulk,
-  title={Bulk viscosity of the Lennard-Jones system at the triple point by dynamical nonequilibrium molecular dynamics},
+  title={{Bulk viscosity of the Lennard-Jones system at the triple point by dynamical nonequilibrium molecular dynamics}},
   author={Palla, P.L. and Pierleoni, C. and Ciccotti, G.},
   journal={Physical Review E},
   volume={78},
@@ -962,8 +962,8 @@ year  = {2013},
 
 @ARTICLE{ciccotti1975direct,
   author = {Ciccotti, G and Jacucci, G},
-  title = {Direct computation of dynamical response by molecular dynamics: The
-	mobility of a charged Lennard-Jones particle},
+  title = {{Direct computation of dynamical response by molecular dynamics: The
+	mobility of a charged Lennard-Jones particle}},
   journal = {Physical Review Letters},
   year = {1975},
   volume = {35},
@@ -976,7 +976,7 @@ year  = {2013},
 
 @ARTICLE{ciccotti1979thought,
   author = {Ciccotti, G. and Jacucci, G. and McDonald, I.R.},
-  title = {"Thought-experiments" by molecular dynamics},
+  title = {{"Thought-experiments" by molecular dynamics}},
   journal = {Journal of Statistical Physics},
   year = {1979},
   volume = {21},
@@ -2507,9 +2507,9 @@ year  = {2013},
 @ARTICLE{lyubartsev1994free,
   author = {Lyubartsev, Alexander P and Laaksonen, Aatto and Vorontsov-Velyaminov,
 	Pavel N},
-  title = {Free energy calculations for Lennard-Jones systems and water using
+  title = {{Free energy calculations for Lennard-Jones systems and water using
 	the expanded ensemble method A Monte Carlo and molecular dynamics
-	simulation study},
+	simulation study}},
   journal = {Molecular Physics},
   year = {1994},
   volume = {82},
@@ -2945,9 +2945,9 @@ year  = {2013},
 
 @ARTICLE{orlandini2011hydrodynamics,
   author = {Orlandini, S. and Meloni, S. and Ciccotti, G.},
-  title = {Hydrodynamics from statistical mechanics: combined dynamical-NEMD
+  title = {{Hydrodynamics from Statistical Mechanics: combined Dynamical-NEMD
 	and conditional sampling to relax an interface between two immiscible
-	liquids},
+	liquids}},
   journal = {Phys. Chem. Chem. Phys.},
   year = {2011},
   volume = {13},
@@ -2959,7 +2959,7 @@ year  = {2013},
 
 @INPROCEEDINGS{orlandini2011hydrodynamics-01,
   author = {Orlandini, Sergio and Meloni, Simone and Ciccotti, Giovanni},
-  title = {Hydrodynamics from dynamical non-equilibrium MD},
+  title = {{Hydrodynamics from Dynamical NEMD}},
   booktitle = {AIP Conference Proceedings},
   year = {2011},
   volume = {1332},
@@ -3410,7 +3410,7 @@ year  = {2013},
 @ARTICLE{prinz2011markov,
   author = {Prinz, J.H. and Wu, H. and Sarich, M. and Keller, B. and Senne, M.
 	and Held, M. and Chodera, J.D. and Sch{\"u}tte, C. and No{\'e}, F.},
-  title = {Markov models of molecular kinetics: Generation and validation},
+  title = {{Markov models of molecular kinetics: Generation and validation}},
   journal = {The Journal of chemical physics},
   year = {2011},
   volume = {134},
@@ -3635,7 +3635,7 @@ year  = {2013},
 @ARTICLE{schuette2011markov,
   author = {Sch{\"u}tte, C. and No{\'e}, F. and Lu, J. and Sarich, M. and Vanden-Eijnden,
 	E.},
-  title = {Markov state models based on milestoning},
+  title = {{Markov State Models based on Milestoning}},
   journal = {The Journal of Chemical Physics},
   year = 2011,
   volume = 134,
