--- a/writedown/npt-neq/alanine.tex
+++ b/writedown/npt-neq/alanine.tex
@@ -91,11 +91,11 @@ in both static and oscillatory EF~\cite{budi2005electric, budi2007effect, budi20
 configurations are usually taken from the Protein Data Bank (PDB),
 and then temperature controlled simulations are performed for a maximum
 time range of the order of 10-60 nanoseconds.
-During this simulation time 
+During these simulations time 
 relevant conformational changes characterizing the solvated molecule can be observed. 
 Along the trajectories, various observable, such as the
 secondary structure, root mean square displacement (RMSD), dipole
-moment, shape parameters are calculated as a function of time, or
+moment, and shape parameters are calculated as a function of time, or
 in stationary condition, taking time averages.
 This approach releases useful information on how the
 secondary structure of the molecule is changed by external  EF.  However,
@@ -151,7 +151,7 @@ in solution subject to an external time-dependent EF.
 
 
 \section{Methodology}
-\subsection{Nonequilibrium molecular dynamics simulation}
+\subsection{Dynamical nonequilibrium molecular dynamics simulation (D-NEMD)}
 In this section we briefly review the dynamical approach to nonequilibrium
 molecular dynamics (D-NEMD) \cite{ciccotti1975direct, ciccotti1979thought,
   orlandini2011hydrodynamics, orlandini2011hydrodynamics-01}.
@@ -173,7 +173,16 @@ phase space.  We assume that the dynamics of the system is governed by the
 Hamiltonian equation, i.e. $\dot {\vect x} = J \cdot \nabla_{\vect x}
 \mathcal H(\vect x, t)$, where $\mathcal H$ is the time-dependent Hamiltonian,
 and $J$ is
-the symplectic matrix. The Liouville equation for the probability
+the symplectic matrix
+\begin{align}
+  J = \left(
+    \begin{array}{rr}
+      0 & I\\
+      -I & 0
+    \end{array}
+    \right).
+\end{align}
+The Liouville equation for the probability
 distribution writes:
 \begin{align}\label{eqn:tmp2}
   \frac{\partial \rho(\vect x, t)}{\partial t} = - iL(t) \rho(\vect x, t),
@@ -200,7 +209,7 @@ Since we assume that the system starts from the equilibrium distribution (withou
  Eq.~\eqref{eqn:tmp4} expresses the fact that the 
 observable $O(t)$ calculated in a situation of nonequilibrium is equal to the ensemble average of
 the microscopic observable computed along trajectories, starting from
-initial configurations sampled from an \emph{equilibrium}
+initial configurations sampled from an initial or, sometimes, an \emph{equilibrium}
 distribution. In practical terms we proceed by first running an equilibrium MD simulation
 to generate a sample of configurations. Next we employ these configurations as
 initial configurations and, for each, the full Hamiltonian dynamics is integrated until
@@ -310,7 +319,7 @@ for the backbone dihedral angles is also used.}
 %The EF exserts force $\vect F = q \vect E(t)$ on
 %the partial charge $q$ in the system.
 The size of the  dynamical region is $R_{ex} = 1.0$~nm.
-All simulations are performed by a home-modified GROMACS~4.5~\cite{pronk2013gromacs} with support to the CHARMM
+All simulations are performed by a home-modified GROMACS~4.5~\cite{pronk2013gromacs} together with the CHARMM
 force field~\cite{bjelkmar2010implementation}.
 First, an equilibrium NVT simulation at 300~K of
 100~\textsf{ns} was performed with a Langevin thermostat (time-scale
@@ -318,14 +327,14 @@ $\tau_T = 0.5~\textsf{ps}$).  Along the trajectory, configurations were taken ev
 50~\textsf{ps} and we used 2000 initial configurations for each nonequilibrium
 MD simulation (if not stated otherwise for specific cases).
 The branching trajectories were integrated by the
-Leap-frog scheme with the aforementioned nonequilibrium
+Leap-frog scheme \bluec{(standard Gromacs implementation)} with the aforementioned nonequilibrium
 temperature control technique.  The
 time step was $0.002~\textsf{ps}$.
 \recheck{The short-range
 interaction (van der Waals interaction)
 have a cut-off radius of 1.0~nm, and has been smoothed from $0.8$ to $1.0$~nm by the
 ``switch'' method provided by the GROMACS code.
-A energy conserving particle mesh Ewald method (PME)~\cite{darden1993pme, essmann1995spm}
+A energy conserving Particle Mesh Ewald (PME)~\cite{darden1993pme, essmann1995spm}
 method was applied to calculate the electrostatic interaction in this
 periodic system. For the direct space part of PME the cut-off and smoothing follow the same principles as those applied to the van der Waals interaction.}
 \recheck {All hydrogen involving bonds are constrained by LINCS~\cite{hess1997lincs}, except 
@@ -335,11 +344,13 @@ coupled to a Langevin thermostat with $\tau_T = 0.1~\textsf{ps}$.
   In all testing cases, this local thermostat is able to control
   the system at the desired temperature, i.e.~300~K (the results
   are not presented in this paper).
-The whole system is also coupled to a Parrinello-Rahman barostat~\cite{parrinello1981polymorphic} with $\tau_P = 2.0~\textsf{ps}$ to keep
+The whole system is also coupled to a Parrinello-Rahman barostat~\cite{parrinello1981polymorphic}~\bluec{(in standard Gromacs implementation)} with $\tau_P = 2.0~\textsf{ps}$ to keep
 the pressure at ambient condition (1~Bar). Since the
 change of the system size is small and slow, the pressure control
 does not have an sizable effect on the
 dynamics of the system.
+% \bluec{The use of leap-frog scheme and Parrinello-Rahman barostat
+% was not our choice, but the default one of Gromacs.}
 At time $t=0$~ps, the system
 has been fully equilibrated without any EF. From $t=0$ to
 the warm-up time $t=t_{\textrm{warm}}$, the EF is switched on linearly, while
@@ -399,9 +410,9 @@ Ramachandran plot into 5 subregions $\{\confaa, \confab, \confba, \confbb, \conf
 (see caption of Fig.~\ref{fig:tmp4} for the corresponding definition).
 It is worth to notice that these conformations
 are found in different secondary structures of a peptide chain:
-$\confaa$ and $\confab$ are
-corresponding to the $\alpha$-helix. $\confba$ and $\confbb$ are
-corresponding to the $\beta$-sheet. $\confc$ is corresponding to the
+$\confaa$ and $\confab$ 
+correspond to the $\alpha$-helix. $\confba$ and $\confbb$ 
+correspond to the $\beta$-sheet. $\confc$ corresponds to the
 left-handed $\alpha$-helix.
 
 
@@ -412,11 +423,11 @@ The most evident case is conformation $\confc$; in fact it is {almost} not prese
 The starting point is the calculation of the probability
 of each conformation:
 \begin{align}
-  P_I(t) = \mathbb P ( (\phi_t,\psi_t) \in I), \quad  I \in \{\confaa, \confab, \confba, \confbb, \confc\},
+  P_I(t) = \mathbb P ( (\phi_t,\psi_t) \in I), \quad  I \textrm{ being one of the five regions } \{\confaa, \confab, \confba, \confbb, \confc\},
 \end{align}
 Notice that the probability is time dependent, being an observable in nonequilibrium situation.
 Next,
-we consider the net probability flux from conformation $I$ to $J$, defined by:
+we consider the \emph{net probability flux} from conformation $J$ to $I$, defined by:
 \begin{align}\nonumber
   F_{J,I}(t) & = \frac1{\Delta t}\,
   \bigg[\,
@@ -446,17 +457,9 @@ net flux goes from $J$ to $I$,
 while a negative value indicates a net flux from $I$ to $J$.
 Through $F_{J,I}(t)$, the analysis of the nonequilibrium process 
 is projected onto the analysis of the probabilistic link between discretized conformations $\{\confaa, \confab, \confba, \confbb, \confc\}$.
-\recheck{ The concept of net probability flux employed by us is similar to the
-  concept of kinetic rate.  However, it must be underlined that, in general, the
-  probability flux should not be interpreted as a kinetic rate.
-  Nonequilibrium molecular dynamics cannot be replaced by 
-  kinetic analysis, the main reason is, firstly, that the nonequilibrium
-  nature of the problem requires the use of a small time interval $\Delta t$ so that the probability flux is well defined.
-  Secondly, within the small
-  time interval (we use 1~ps), the conformational
-  dynamics of alanine dipeptide is generally not Markovian~\cite{schuette2011markov, prinz2011markov},
-  therefore, a direct application of the kinetic
-  analysis may be questionable.}
+\recheck{ The concept of net probability flux employed by us is very close to the
+  concept of kinetic rate.  However, we prefer to stick to our definition which
+is mathematically simpler and univocal.}
 In the case of oscillatory EF, the behaviour of the net probability flux is also highly oscillatory, thus, in order to clearly identify the essential features of the molecular conformational changes, it is convenient to study the integrated net probability flux, defined as:
 \begin{align}\label{eqn:tmp7a}
   Q_{J,I} (t) = \int_0^t F_{J,I}(\tau)d \tau,
@@ -477,7 +480,7 @@ which expresses the cumulative effects due to the action of EF on the conformati
     to $\confc$. \recheck{
       The solid lines denote the results of one branching trajectory
       starting from each initial conformation, while the dashed lines denote
-      the results of four branching trajectories (different random seeds for the Langevin thermostat) starting from each initial
+      the average of the four branching trajectories (different random seeds for the Langevin thermostat, see text) starting from each initial
       conformation.
       The shadowed region with each solid line denotes the
       statistical uncertainty of the result at 95\% confidence level.
@@ -501,6 +504,7 @@ which expresses the cumulative effects due to the action of EF on the conformati
     $\confc$, respectively. In each plot, the red line stands for $J=\confaa$,
     green for $J=\confab$, dark blue for $J=\confba$, purple for $J=\confbb$ and light blue
     for $J=\confc$.
+    \bluec{This plot is drawn from the four-branching-trajectories case (see the text).}
     }
   \label{fig:tmp6}
 \end{figure}
@@ -518,21 +522,22 @@ which are present at the initial stage after EF is switched on,
 probability of the $\alpha$-helix conformation $\confaa$, grows from 0.45 to 0.69.
 The $\alpha$-helix $\confab$  does not change significantly  under the action of EF.
 The left-hand helix conformation $\confc$ noticeably grows from 0 to 0.22.
-We plot the net probability fluxes in Fig.~\ref{fig:tmp6}.
+We plot the net probability fluxes \bluec{of the four-branching-trajectories case} in Fig.~\ref{fig:tmp6}.
 Results show that for short $t$, the net fluxes are generally non-zero,
 however, 
 as $t$ goes to infinity,
 all fluxes converge to zero. This indicates
-that as the EF is switched on, the system first is driven away from the initial
-equilibrium (at zero EF);  This is a nonequilibrium process.
+that as the EF is switched on, the system is driven away from the initial
+equilibrium (at zero EF),  starting a dynamical nonequilibrium process.
 \recheck{After sufficiently long time, the system
-is fully relaxed to the new conformations,
-and remains in such a state as long as the EF is switched on. However, on the very long time scale,
-there may exist very slow nonequilibrium processes, for example within an 1~$\mu$s range,
-which cannot be captured by the duration of our nonequilibrium simulation (1~ns).
-Obviously, the proposed nonequilibrium simulation
-method can study time-dependent behaviours that are no longer than
-the simulation time. 
+is fully relaxed to the new stationary state, in
+which it remains as long as the EF is switched on.
+Of course we cannot exclude very slow nonequilibrium processes,
+which cannot be captured by the duration of
+our nonequilibrium simulation (1~ns), since it is
+obviously that the proposed nonequilibrium approach
+can only study time-dependent behaviours that are shorter than
+the total time of the branching trajectories. 
 }
 % After a time long enough, the system
 % is fully relaxed to the new equilibrium defined by the action of the constant EF,
@@ -565,8 +570,8 @@ This is a relevant result because it shows the possibility of employing an exter
 The fact that our external perturbation corresponds to the action of
 an electric field, naturally leads to the question 
 \recheck{
-  about the alignment of the molecular dipole vector along the direction of external EF}, and, in turn, how this is related
-to the overall \recheck{conformational selection} of the molecule reported in
+  of the alignment of the molecular dipole vector along the direction of external EF}, and, in turn, of how this is related
+to the overall \recheck{conformational change} of the molecule as reported in
 the previous section.
 \begin{figure}
   \centering
@@ -586,13 +591,13 @@ The dipole moment of the alanine dipeptide is defined by
 \begin{align}\label{eqn:tmp8}
   \boldsymbol\mu_{\textrm{alanine}}(t) =
   \bigg\langle
-  \sum_{i\in \{\textrm{atoms of alanine}\}}
+  \sum_{i\in \{\textrm{point charges of alanine}\}}
   q_i\, \vect r_i(t)
   \bigg\rangle,
 \end{align}
-where $q_i$ denotes the partial charge of any point particle $i$ defining our model of alanine,
+where $q_i$ denotes the partial charge of any point charge $i$ defining our model of alanine,
 the molecule being neutral, i.e.~$\sum_iq_i = 0$.
-$\vect r_i$ denotes the position of the particle $i$.
+$\vect r_i$ denotes the position of the point $i$.
 Fig.~\ref{fig:tmp3}
 shows that the $x$-component of the dipole moment 
 reaches 85\% of its maximum value in only 20~ps, which is comparable to
@@ -603,10 +608,10 @@ maximum value, that is,
 6.8~Debye, and  corresponds to an energy
 ($\boldsymbol\mu_{\textrm{alanine}} \cdot \vect E$)
 of c.a.~$-13.6$~kJ/mol.
-We calculate the averaged dipole moment of different conformations
-(defined by taking average in Eqn.~\eqref{eqn:tmp8}
-only for a certain conformation)
-under the constant EF, and they are 6.8, 6.0, 5.1, 3.1 and 7.1~Debye
+We calculated the averaged dipole moment of different conformations
+(defined by taking averages in Eqn.~\eqref{eqn:tmp8}
+only for given conformations)
+under constant EF, and found 6.8, 6.0, 5.1, 3.1 and 7.1~Debye
 for $\confaa$, $\confab$, $\confba$, $\confbb$ and $\confc$, respectively.
 The dipole energy difference between 3.1 and 7.1~Debye is roughly 8.0~kJ/mol.
 Under a constant EF, the system will be likely to be driven towards those
@@ -635,7 +640,7 @@ Comparing Fig.~\ref{fig:tmp3} with~\ref{fig:tmp5},
 \subsection{Response of the orientational order parameter}
 As a complementary information to the behaviour of the molecular dipole moment it is of interest to describe the overall orientational behaviour of the molecules w.r.t. the EF. In fact while the dipole moment specifically expresses the rearrangement of charges within the molecule as a response to the EF, the overall direction of the molecule tells us about the interplay between the internal positional rearrangement of the atoms and their alignment w.r.t. the EF.   
 To this aim, let us define
-the geometric direction of the alanine by the red vector in
+the geometric direction of the alanine by the red vector in the inset in
 Fig.~\ref{fig:tmp3}, i.e.~by the angle bisector of the two black vectors,
 which connect the $\alpha$-carbon and the carbons
 on the methyl groups. 
@@ -654,7 +659,7 @@ If the molecule is perfectly perpendicular to the EF, then $S_\theta = 1$, if is
 preference, then $S_\theta = 0$. 
 From $t=0$ to roughly 10~ps, the orientational order parameter rapidly
 decreases from 0 to $-0.15$, which means a weak alignment of the molecule to the external field.
-Then from $t=0$ to 500~ps, the molecule slowly changes to the orientation
+Then from $t=10$ to 500~ps, the molecule slowly changes to the orientation
 that is almost perpendicular to the EF.
 In fact,
   the vector of the geometric direction tends to be perpendicular
@@ -707,7 +712,7 @@ center-of-mass (COM) of the water molecules
 RDF does not change significantly as a function of time
 (within the statistical error). 
 Fig.~\ref{fig:tmp7a}~(b) presents the number of hydrogen bonds between the
-alanine and water molecules, and between two water molecules.
+alanine and water molecules, and between two neighboring water molecules.
 The number of hydrogen bonds are calculated by standard GROMACS
 routine {\texttt {g\_hbond}}, with donor-acceptor distance cut-off 0.3~nm,
 and hydrogen-donor-acceptor angle cut-off $20^{\circ}$.
@@ -803,13 +808,13 @@ alanine has enough time to
 relax its dipole. However,
 for $\period =10$ and 40~ps, the EF oscillates faster and the molecule 
 does not have enough time to fully relax the dipole, as a consequence the maximum dipole moment is smaller than the previous case.
-Fig.~\ref{fig:tmp9}~(b) presents the orientational order
-parameter. The notations are the same as Fig~\ref{fig:tmp9}~(a).
+Fig.~\ref{fig:tmp8}~(b) presents the orientational order
+parameter. The notations are the same as Fig~\ref{fig:tmp8}~(a).
 For all cases the order parameter is much
 smaller than in the case of constant EF. One possible reason is that the
 relaxation of the order parameter is very slow, and the molecule in the case of oscillatory field is
 not exposed to a strong enough EF for a time long enough.
-For  $\period =10$ and 40~ps, the orientation of the alanine shows a weak tendency
+For  $\period =10$ and 40~ps, the orientation of the alanine shows a \bluec{very} weak tendency
 to be parallel to the EF. It is worth to notice that for constant EF,
 we also observe a quick alignment of the molecular orientation vector to the EF
 on the time scale of 10~ps. For $\period =200$~ps, the molecule tends periodically
@@ -899,8 +904,8 @@ are not observed in the oscillatory EF case.
 \begin{figure}
   \centering
   \includegraphics[width=0.6\textwidth]{fig.ala.new/graphs/graph-t0010-2.eps}
-  \caption{Schematic plot of the main probability flux between conformations
-    for periodically oscillatory EF, $\period =10$~ps. The thickness 
+  \caption{Schematic plot of the main probability fluxes between conformations
+    for oscillatory EF, $\period =10$~ps. The thickness 
     of the arrows approximately presents the strength of the flux.
     The numbers near the arrows indicates the strength of the averaged
     probability flux, the unit of which is $10^{-3}\times\textrm{ps}^{-1}$.
@@ -911,7 +916,7 @@ In comparison to the static EF case, where the probability flux
 vanishes when the system reaches steady state (Fig.~\ref{fig:tmp6}), 
 Fig.~\ref{fig:tmp10} shows increasing
 integrated probability net fluxes, which imply some lasting and directional
-fluxes among the conformations (see Fig.~\ref{fig:tmp9}).
+fluxes among the conformations \bluec{in steady state}.
 Fig.~\ref{fig:tmp11} presents
 a schematic plot of the main probability fluxes for $\period =10$~ps.
 The thickness of the arrows and the numbers nearby indicate
@@ -1059,30 +1064,47 @@ the $x$ component of the velocity of the $i$th atom.  The notation
 $\langle\cdot\rangle_0$ denotes the equilibrium ensemble average.
 We report the correlation function
 $\langle j(0)\cdot \chi_{\confc}(t) \rangle_0$ as a function of correlation time $t$
-in Fig.~\ref{fig:appdx1}. The value of the function is estimated from
+in Fig.~\ref{fig:appdx1}~(a). The value of the function is estimated from
 two independent 1~$\mu$s equilibrium simulations.
 It must be noticed that the total length of the equilibrium
 trajectories is the same as the nonequilibrium simulation (2000
 trajectories, each 1000~ps long).
 Results show that the statistical error is much larger than the value of
-correlation function itself.  Therefore, the
-overwhelming statistical uncertainty does not allow us to use such a quantity
-in Eq.~\eqref{eqn:tmp1} to calculate the
-nonequilibrium averages. 
-Since the total computational effort of
+correlation function itself.
+\bluec{
+  In Fig.~\ref{fig:appdx1}~(b),
+  the probability of conformation $\confc$ calculated from
+  the linear response theory~\eqref{eqn:appdx1} is compared with that
+  computed from D-NEMD~\eqref{eqn:tmp1}.
+  The linear response result follows the D-NEMD result only in the very first
+  15~ps, then it diverges. Since it is meaningless for a probability
+  being larger than 1, the linear response result is qualitatively wrong.
+Therefore, the
+overwhelming statistical uncertainty suggest to prefer
+D-NEMD~Eq.~\eqref{eqn:tmp1} to calculate the
+nonequilibrium averages. }
+In fact, since the total computational effort of
 the equilibrium simulation is the same as the nonequilibrium
-simulation, we conclude that nonequilibrium simulation is more
+simulation, the nonequilibrium simulation is more
 accurate than the conventional equilibrium approach (linear response) at the same computational cost.
 A similar
-observation has already been reported in ~\cite{ciccotti1975direct}.
+observation has already been reported in Ref.~\cite{ciccotti1975direct}.
 }
 
 \begin{figure}
   \centering
   \includegraphics{fig.ala.new/fig-corr-meta.eps}
-  \caption{The correlation function $\langle j(0)\cdot \chi_{\confc}(t)
-    \rangle_0$ against time $t$. The error bars in the figure denote
-    the statistical uncertainty at 95\% confidence level. }
+  \includegraphics{fig.ala.new/fig-corr-meta-c.eps}
+  \caption{
+    \bluec{The numerical result of the linear response theory.
+    (a): The correlation function $\langle j(0)\cdot \chi_{\confc}(t)
+    \rangle_0$ against time $t$.
+    The error bars in the figure denote
+    the statistical uncertainty at 95\% confidence level. 
+    (b): The probability of conformation $\confc$ computed from the
+    linear response theory~\eqref{eqn:appdx1} versus that
+    computed from D-NEMD~\eqref{eqn:tmp1}.}
+  }
   \label{fig:appdx1}
 \end{figure}
 
